--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,15 +5,15 @@ plugins {
 
 android {
     namespace 'com.example.android.myapplication'
-    compileSdk 32
+    compileSdk 33
 
     dataBinding{
         enabled true
     }
     defaultConfig {
         applicationId "com.example.android.myapplication"
-        minSdk 21
-        targetSdk 32
+        minSdk 24
+        targetSdk 33
         versionCode 1
         versionName "1.0"
 
@@ -36,8 +36,10 @@ android {
 }
 
 dependencies {
+    //MobileFFmpeg Library for video editing
+    implementation 'com.arthenica:mobile-ffmpeg-full:4.4'
 
-    implementation 'androidx.core:core-ktx:1.7.0'
+    implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.google.android.material:material:1.7.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
