--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,7 +12,7 @@ android {
     }
     defaultConfig {
         applicationId "com.example.android.myapplication"
-        minSdk 24
+        minSdk 26
         targetSdk 33
         versionCode 1
         versionName "1.0"
@@ -36,6 +36,7 @@ android {
 }
 
 dependencies {
+    implementation 'com.shamanland:xdroid-toaster:0.0.10'
     // Library for video editing
     implementation 'com.arthenica:ffmpeg-kit-full:4.5.1-1'
     implementation 'androidx.core:core-ktx:1.9.0'
